falta netlify deploy

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <title>Serene - El verdadero estilo a tu alcance</title>
     <link rel="shortcut icon" href="./assets/S-ico.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');</style>
 </head>
 <body>
-    <!-- Los 5 HTML son: index, bags, accesorios, carrito, preguntas frecuentes -->
+    <!-- Los 7 HTML trabajados son: index, bags, minibags, billeteras, accesorios, carrito, preguntas frecuentes -->
     <header class="container-fluid" class="header-BS">
         <div class="row align-items-center">
             <div class="col-md-5 order-md-2">
@@ -96,7 +96,7 @@
                         <img src="./assets/carteras2.jpg" alt="Producto-cartera Magenta, minibag en colores blanco y negro, con cadena frontal intercaladas entre dorado y el color respectivo de la cartera. Precio promocional $27.000">
                     </div>
                     <div>
-                        <h4>MAGENTA</h4>
+                        <h4>RUBY</h4>
                         <p>-$31.000-</p>
                         <p2>$27.000</p>
                         <a href="">comprar</a>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="envios">
                     <img src="./assets/reloj.png" alt="Compra antes de las 11AM y lo tenes en tu casa en menos de 24hs">
-                    <p>Compra antes de las 11 AM y <br> lo tienes en 24hs</p>
+                    <p>Compra hasta las 11 AM y lo tenes en 24hs</p>
                 </div>
             </div>
             <div class="bloque-nuevos-ingresos">
@@ -163,7 +163,7 @@
         </section>
 
         <!-- SECCION 4 - Bloque Billeteras -->       
-        <section class="flex-productos" >
+        <section class="flex-productos">
             <div class="productPic">
                 <div class="item1-prod">
                     <div>
@@ -181,7 +181,7 @@
                         <img src="./assets/billeteras2.jpg" alt="Billetera Juliet, tamaño medio con apertura frontal y candadito de cierre dorado. Precio promocional $17.300">
                     </div>
                     <div>
-                        <h4>JULIET</h4>
+                        <h4>JULIETT</h4>
                         <p>-$22.000-</p>
                         <p2>$17.300</p>
                         <a href="">comprar</a>
@@ -219,7 +219,7 @@
         <!-- SECCION 5 - BLOQUE ACCESORIOS -->
         <section class="flex-productos">
             <div class="cartelPic">
-                <img src="./assets/Cartel accesorios.png" alt="Se observa una mujer caminando de manera empoderada y luciendo multiples accesorios como cintos, gafas, aretes, relojes y más. Esta imagen representa la cartelera de accesorios en la pagina principal del sitio">
+                <img src="./assets/Cartel accesorios2.jpg" alt="Se observa una mujer caminando de manera empoderada y luciendo multiples accesorios como cintos, gafas, aretes, relojes y más. Esta imagen representa la cartelera de accesorios en la pagina principal del sitio">
                 <h2>ACCESORIOS</h2>
             </div>
             <div class="productPic">
@@ -228,7 +228,7 @@
                         <img src="./assets/accesorios1.jpg" alt="cadenita soft, acero quirurgico bañado en oro de 18 kilates con una perla blanca como dije">
                     </div>
                     <div>
-                        <h4>cadenita Soft</h4>
+                        <h4>SOFT</h4>
                         <p>-$35.500-</p>
                         <p2>$32.000</p>
                         <a href="">comprar</a>
@@ -239,7 +239,7 @@
                         <img src="./assets/accesorios2.jpg" alt="aros gold, de acero quirurgico bañado en oro de 18 kilates con diseño trenzado">
                     </div>
                     <div>
-                        <h4>aros Gold</h4>
+                        <h4>GOLD</h4>
                         <p>-$18.000-</p>
                         <p2>$14.000</p>
                         <a href="">comprar</a>
@@ -250,7 +250,7 @@
                         <img src="./assets/accesorios3.jpg" alt="cadenita Diana, con muchas perlas pequeñas y una grande central, todas en color marmol blanco">
                     </div>
                     <div>
-                        <h4>cadenita Diana</h4>
+                        <h4>DIANA</h4>
                         <p>-$32.000-</p>
                         <p2>$29.500</p>
                         <a href="">comprar</a>
@@ -261,7 +261,7 @@
                         <img src="./assets/accesorios4.jpg" alt="aros Square, muy bellos, bañados en oro de 18 kilates">
                     </div>
                     <div>
-                        <h4>aros Square</h4>
+                        <h4>SQUARE</h4>
                         <p>-$22.000-</p>
                         <p2>$18.000</p>
                         <a href="">comprar</a>
@@ -294,7 +294,7 @@
     <footer class="footer-flex">
         <div class="item1-ubi-mail">
             <img src="./assets/ubi.png" alt="item ubicacion - esquina Chacabuco y Olmos - Córdoba, Argentina">
-            <p>Chacabuco y Olmos - Córdoba, Argentina</p>
+            <p>Chacabuco y Olmos - <br>Córdoba, Argentina</p>
             <img src="./assets/email.png" alt="correo electronico de contacto - paoloyclelia@gmail.com">
             <p>paoloyclelia@gmail.com</p>
         </div>
@@ -304,7 +304,7 @@
                 <h5><a href="./pages/preguntasfrecuentes.html">PREGUNTAS FRECUENTES</a></h5>
             </div>
             <div class="term-polit">
-                <a class="barra" href="./pages/terminos-y-condiciones.html">Términos y condiciones</a>
+                <a href="./pages/terminos-y-condiciones.html">Términos y condiciones -</a>
                 <a href="./pages/política-de-privacidad.html">Política de privacidad</a>
             </div>
         </div>
