--- a/pages/bags.html
+++ b/pages/bags.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid" class="header-BS">
         <div class="row align-items-center">
             <div class="col-md-5 order-md-2">
                 <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
             </div>
             <div class="col-md-5 order-md-1">
-                <nav class="navbar navbar-expand-md navbar-light bg-light">
+                <nav class="navbar navbar-expand-md navbar-light">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -43,15 +43,15 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-md-2 order-md-3">
+            <div class="col-md-2 order-md-3 block3header">
                 <div class="login">
                     <a href="">sign up</a>
-                    <a href="">| login <img src="../assets/login.png" alt=""></a>
+                    <a href="">| login<img src="../assets/login.png" alt="item sign up | login"></a>
                 </div>
                 <div class="carrito-search">
-                    <a href=""><img src="../assets/lupa.png" alt=""></a>
-                    <a href=""><img src="../assets/heart.png" alt=""></a>
-                    <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+                    <a href=""><img src="../assets/lupa.png" alt="item buscador"></a>
+                    <a href=""><img src="../assets/heart.png" alt="item elementos gustados"></a>
+                    <a href="../pages/carrito.html"><img src="../assets/carrito-de-compras.png" alt="item carrito de compras"></a>
                 </div>
             </div>
         </div>
@@ -66,6 +66,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CLASSIC BLACK</h5>
                             <p class="card-text">Bandolera rígida de eco-cuero negro con correa.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -76,6 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BOLSO COCO</h5>
                             <p class="card-text">Bolso de eco-cuero con piel de cocodrilo.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -86,6 +88,7 @@
                         <div class="card-body">
                             <h5 class="card-title">ROSY</h5>
                             <p class="card-text">Bandolera rígida con broche imantado.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -96,6 +99,7 @@
                         <div class="card-body">
                             <h5 class="card-title">DANA</h5>
                             <p class="card-text">Bandolera rígida con correa desmontable y pañuelo.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -106,6 +110,7 @@
                         <div class="card-body">
                             <h5 class="card-title">SUSAN</h5>
                             <p class="card-text">Cartera de eco-cuero marron con broche dorado.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -116,6 +121,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BOLSO MORGAN</h5>
                             <p class="card-text">Bolso de tela texturada, amplio y con cierre simple.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -126,6 +132,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LIGHT MARGARET</h5>
                             <p class="card-text">Bolso de tela con cadenas doradas y cierre de broche.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -136,6 +143,7 @@
                         <div class="card-body">
                             <h5 class="card-title">MILUSKA</h5>
                             <p class="card-text">Bandolera negra con broche dorado y patron calado.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -146,6 +154,7 @@
                         <div class="card-body">
                             <h5 class="card-title">ALEXIA</h5>
                             <p class="card-text">Bandolera rígida naranja con cierre imantado.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -156,6 +165,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BLAIR</h5>
                             <p class="card-text">Bandolera rígida negra con apertura lateral.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -166,6 +176,7 @@
                         <div class="card-body">
                             <h5 class="card-title">DARK MARGARET</h5>
                             <p class="card-text">Bolso de tela con cadenas doradas y cierre de broche.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -176,6 +187,7 @@
                         <div class="card-body">
                             <h5 class="card-title">MANHATTAN</h5>
                             <p class="card-text">Bag bandolera rígida, con cadena dorada.</p>
+                            <p class="card-text">$38.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
