--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -65,7 +65,7 @@
                         <img src="../assets/pag-productos/1-bags/1bagscards.jpg" alt="producto en carrito de compras, bag elena, 2 unidades $100.000">
                     </div>
                     <div class="resumen1-text">
-                        <h6>Bag ELENA FullStack Developer</h6>
+                        <h6>Bag ELENA</h6>
                         <p>color: negro</p>
                         <p>$100.000</p>
                         <p>SKU: AS76987DS9FYS98</p>
@@ -78,7 +78,7 @@
                         <img src="../assets/pag-productos/3-billeteras/12billeterascards.jpg" alt="producto en carrito de comra, billetera Susie, $35.000">
                     </div>
                     <div class="resumen2-text">
-                        <h6>Wallet Susie FullStack Developer</h6>
+                        <h6>Wallet Susie</h6>
                         <p>color: negro</p>
                         <p>$35.000</p>
                         <p>SKU: AS76987DS9FYS98</p>
