--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -64,16 +64,16 @@
                     <a class="preguntas" href=""><img src="../assets/PF-monitor.png" alt="item guia de compra">GUÍA DE COMPRA</a>
                 </div>
                 <div class="item2">
-                    <a class="preguntas" href=""><img src="../assets/PF-carrito.png" alt="item precios y promociones">PRECIOS Y PROMOCIONES</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-carrito.png" alt="item precios y promociones">PRECIOS Y <br>PROMOCIONES</a>
                 </div>
                 <div class="item3">
                     <a class="preguntas" href=""><img src="../assets/PF-mediopago.png" alt="item medios de pago">MEDIOS DE PAGO</a>
                 </div>
                 <div class="item4">
-                    <a class="preguntas" href=""><img src="../assets/PF-envio.png" alt="item envios y entregas">ENVÍOS Y ENTREGAS</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-envio.png" alt="item envios y entregas">ENVÍOS Y <br>ENTREGAS</a>
                 </div>
                 <div class="item5">
-                    <a class="preguntas" href=""><img src="../assets/PF-devolucion.png" alt="item cambios y devoluciones">CAMBIOS Y DEVOLUCIONES</a>
+                    <a class="preguntas" href=""><img src="../assets/PF-devolucion.png" alt="item cambios y devoluciones">CAMBIOS Y <br>DEVOLUCIONES</a>
                 </div>
                 <div class="item6">
                     <a class="preguntas" href=""><img src="../assets/PF-gift-card.png" alt="item gift card">GIFT CARD</a>
@@ -173,7 +173,6 @@
                     </div>
                 </div>
             </div>
-
     </main>
 
     <footer class="footer-flex">
