--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid" class="header-BS">
         <div class="row align-items-center">
             <div class="col-md-5 order-md-2">
                 <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
             </div>
             <div class="col-md-5 order-md-1">
-                <nav class="navbar navbar-expand-md navbar-light bg-light">
+                <nav class="navbar navbar-expand-md navbar-light">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -43,15 +43,15 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-md-2 order-md-3">
+            <div class="col-md-2 order-md-3 block3header">
                 <div class="login">
                     <a href="">sign up</a>
-                    <a href="">| login <img src="../assets/login.png" alt=""></a>
+                    <a href="">| login<img src="../assets/login.png" alt="item sign up | login"></a>
                 </div>
                 <div class="carrito-search">
-                    <a href=""><img src="../assets/lupa.png" alt=""></a>
-                    <a href=""><img src="../assets/heart.png" alt=""></a>
-                    <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+                    <a href=""><img src="../assets/lupa.png" alt="item buscador"></a>
+                    <a href=""><img src="../assets/heart.png" alt="item elementos gustados"></a>
+                    <a href="../pages/carrito.html"><img src="../assets/carrito-de-compras.png" alt="item carrito de compras"></a>
                 </div>
             </div>
         </div>
@@ -66,6 +66,7 @@
                         <div class="card-body">
                             <h5 class="card-title">SUNRISE</h5>
                             <p class="card-text">Cadenita bañada en oro con dije de sol y perla de plata.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -76,6 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Aritos Isabella</h5>
                             <p class="card-text">De oro con mini-perlas y moño dorado.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -86,6 +88,7 @@
                         <div class="card-body">
                             <h5 class="card-title">GARDEN</h5>
                             <p class="card-text">Aritos de oro con pétalos de perlas y piedra grande.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -96,6 +99,7 @@
                         <div class="card-body">
                             <h5 class="card-title">UNIVERSE</h5>
                             <p class="card-text">Aritos colgantes bañados en oro con anillos dorados.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -106,6 +110,7 @@
                         <div class="card-body">
                             <h5 class="card-title">AURORA</h5>
                             <p class="card-text">Anillo de oro en forma de trenza eterna.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -116,6 +121,7 @@
                         <div class="card-body">
                             <h5 class="card-title">ELENA</h5>
                             <p class="card-text">Argollas bañadas en oro y recubiertas en mini perlas.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -126,6 +132,7 @@
                         <div class="card-body">
                             <h5 class="card-title">ESMERALDA</h5>
                             <p class="card-text">Cadenita de oro con dije de esmeralda.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -136,6 +143,7 @@
                         <div class="card-body">
                             <h5 class="card-title">KEYHEART</h5>
                             <p class="card-text">Cadenita bañada en oro con romantica llave.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -146,6 +154,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BIANCA</h5>
                             <p class="card-text">Cadenita extra-fina de oro con dije de Cuarzo blanco.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -156,6 +165,7 @@
                         <div class="card-body">
                             <h5 class="card-title">ZAFIRA</h5>
                             <p class="card-text">Anillo de oro con forma de corazones entrelazados.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -166,6 +176,7 @@
                         <div class="card-body">
                             <h5 class="card-title">SATURNO</h5>
                             <p class="card-text">Cadenita fina bañada en oro con dije de piedra de Saturno.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -176,6 +187,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CHAIN</h5>
                             <p class="card-text">Anillo encadenado, de oro puro de 18 kilates.</p>
+                            <p class="card-text">$32.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
