--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -16,7 +16,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header class="container-fluid" class="header-BS">
         <div class="row align-items-center">
@@ -71,6 +70,7 @@
                         <div class="card-body">
                             <h5 class="card-title">COCODRILE</h5>
                             <p class="card-text">Charol con patron de cocodrilo. Tamaño M.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -81,6 +81,7 @@
                         <div class="card-body">
                             <h5 class="card-title">DIVA</h5>
                             <p class="card-text">Apertura frontal, de eco-cuero. Tamaño S.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -91,6 +92,7 @@
                         <div class="card-body">
                             <h5 class="card-title">STYLE</h5>
                             <p class="card-text">Perfecta, con el estilo justo. Tamaño M.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -101,6 +103,7 @@
                         <div class="card-body">
                             <h5 class="card-title">OLD SKY</h5>
                             <p class="card-text">Eco-cuero y aterciopelada. Tamaño M.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -111,6 +114,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CAROL</h5>
                             <p class="card-text">Amplia, multiples secciones internas. Tamaño L.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -121,6 +125,7 @@
                         <div class="card-body">
                             <h5 class="card-title">WAGON</h5>
                             <p class="card-text">Eco-cuero rugoso, acabado sutil. Tamaño L.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -131,6 +136,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BASIC ONE</h5>
                             <p class="card-text">Tela texturada con cierre dorado. Tamaño L.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -141,6 +147,7 @@
                         <div class="card-body">
                             <h5 class="card-title">VICTORIA</h5>
                             <p class="card-text">Cuero liso y aterciopelada, con broche V invertida.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -151,6 +158,7 @@
                         <div class="card-body">
                             <h5 class="card-title">PLATINUM</h5>
                             <p class="card-text">Noche diva, noche loca. Color plateado. Tamaño S.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -161,6 +169,7 @@
                         <div class="card-body">
                             <h5 class="card-title">YARARÁ</h5>
                             <p class="card-text">Con alma vieja y experiencia vasta. Tamaño Real.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -171,6 +180,7 @@
                         <div class="card-body">
                             <h5 class="card-title">MONEDERO BLACK</h5>
                             <p class="card-text">Ideal para llevar tu moneda mejor valorada.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -181,6 +191,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LILI</h5>
                             <p class="card-text">Eco-cuero gris azulado, con cierre de hebilla. Tamaño M.</p>
+                            <p class="card-text">$27.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
