--- a/pages/minibags.html
+++ b/pages/minibags.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid" class="header-BS">
         <div class="row align-items-center">
             <div class="col-md-5 order-md-2">
                 <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
             </div>
             <div class="col-md-5 order-md-1">
-                <nav class="navbar navbar-expand-md navbar-light bg-light">
+                <nav class="navbar navbar-expand-md navbar-light">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -43,15 +43,15 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-md-2 order-md-3">
+            <div class="col-md-2 order-md-3 block3header">
                 <div class="login">
                     <a href="">sign up</a>
-                    <a href="">| login <img src="../assets/login.png" alt=""></a>
+                    <a href="">| login<img src="../assets/login.png" alt="item sign up | login"></a>
                 </div>
                 <div class="carrito-search">
-                    <a href=""><img src="../assets/lupa.png" alt=""></a>
-                    <a href=""><img src="../assets/heart.png" alt=""></a>
-                    <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+                    <a href=""><img src="../assets/lupa.png" alt="item buscador"></a>
+                    <a href=""><img src="../assets/heart.png" alt="item elementos gustados"></a>
+                    <a href="../pages/carrito.html"><img src="../assets/carrito-de-compras.png" alt="item carrito de compras"></a>
                 </div>
             </div>
         </div>
@@ -66,6 +66,7 @@
                         <div class="card-body">
                             <h5 class="card-title">STAR</h5>
                             <p class="card-text">Minibag rígida de ecocuero, con detalles en dorado.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -76,6 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">COQUETTE</h5>
                             <p class="card-text">Minibag femenina y delicada, con accesorio de pañuelo.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -86,6 +88,7 @@
                         <div class="card-body">
                             <h5 class="card-title">WANDA</h5>
                             <p class="card-text">Minibag rígida con mango anudado y acolchado.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -96,6 +99,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BLACK PATTERN</h5>
                             <p class="card-text">Rígida, correa desmontable y mango anudado.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -106,6 +110,7 @@
                         <div class="card-body">
                             <h5 class="card-title">RUBY</h5>
                             <p class="card-text">Minibag elegante, rígida, con cadena bicolor.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -116,6 +121,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CAMILL</h5>
                             <p class="card-text">Minibag efecto acolchado y correa desmontable.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -126,6 +132,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BARBIE</h5>
                             <p class="card-text">Es única. Fina como barbie, bella como ella.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -136,6 +143,7 @@
                         <div class="card-body">
                             <h5 class="card-title">TREBOL</h5>
                             <p class="card-text">Minibag blanca con broche fake trebol.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -146,6 +154,7 @@
                         <div class="card-body">
                             <h5 class="card-title">WAVES</h5>
                             <p class="card-text">Minibags de tela brillante, con textura rugosa.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -156,6 +165,7 @@
                         <div class="card-body">
                             <h5 class="card-title">CELESTE</h5>
                             <p class="card-text">Minibag simple, con sensacion de nube.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -166,6 +176,7 @@
                         <div class="card-body">
                             <h5 class="card-title">MAGGIE</h5>
                             <p class="card-text">Minibag fucsia, te acompaña a donde vayas.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
@@ -176,6 +187,7 @@
                         <div class="card-body">
                             <h5 class="card-title">KENDAL</h5>
                             <p class="card-text">Minibag de eco-cuero negro con broches de metal.</p>
+                            <p class="card-text">$29.000</p>
                             <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
