--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <!-- Los 7 HTML trabajados son: index, bags, minibags, billeteras, accesorios, carrito, preguntas frecuentes -->
     <header class="container-fluid" class="header-BS">
         <div class="row align-items-center">
             <div class="col-md-5 order-md-2">
